--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Game of kids</title>
+		<title>Game of DEV PROJ1</title>
 
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<center><h1>Game of kids</h1></center>
+		<center><h1>Game of DEV PROJ1</h1></center>
 		<hr>
 		<div id="topOfPage">
 			<center><img src="images/GOT.jpg" align="center"></img></center>
@@ -23,7 +23,7 @@
 		<hr>
 		<p><h3>Warring kingdoms:</h3>
 			<ul>
-				<li>Kingdom of the North!</li>
+				<li>Kingdom of the N S E W!</li>
 				<li>Kingdom of the Mountain and the Vale!</li>
 				<li>Kingdom of the Isles and Rivers</li>
 				<li>Kingdom of the Rock</li>
