--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Game of git</title>
+		<title>Game of students</title>
 
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -11,7 +11,7 @@
 	</head>
 
 	<body>
-		<center><h1>Game of git</h1></center>
+		<center><h1>Game of students</h1></center>
 		<hr>
 		<div id="topOfPage">
 			<center><img src="images/GOT.jpg" align="center"></img></center>
